--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         <p class="descripcion">Challenge de ONE NEXT EDUCATION y ALURA LATAM</p>
 
     </footer>
-<script src="/script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
